--- a/automacaosistemas.ipynb
+++ b/automacaosistemas.ipynb
@@ -315,7 +315,7 @@
     "time.sleep(5)\n",
     "# Enviar por e-mail o resultado\n",
     "pyautogui.click(x=82, y=207)\n",
-    "pyautogui.write('rosicreferreira+diretoria@gmail.com')\n",
+    "pyautogui.write('email+diretoria@gmail.com')\n",
     "pyautogui.press('tab') # Seleciona o e-mail\n",
     "time.sleep(1)\n",
     "pyautogui.press('tab') # Pula para o campo de assunto\n",
